Fix Search Result Overlap (#4556)
Increase header-bar z-indexes and decrease on works page

--- a/static/css/components/header-bar.less
+++ b/static/css/components/header-bar.less
@@ -174,7 +174,7 @@
     -webkit-box-ordinal-group: 6;
     -ms-flex-order: 5;
     order: 5;
-    z-index: @z-index-level-2;
+    z-index: @z-index-level-5;
 
     li {
       -ms-flex-preferred-size: 100%;
@@ -225,7 +225,7 @@
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
-    z-index: @z-index-level-1;
+    z-index: @z-index-level-4;
 
     // stylelint-disable selector-max-specificity
     // stylelint-disable max-nesting-depth
