--- a/static/css/components/work.less
+++ b/static/css/components/work.less
@@ -135,7 +135,7 @@ h2.edition-byline {
     top: 0;
     display: block;
     background: @white;
-    z-index: @z-index-level-4;
+    z-index: @z-index-level-3;
     padding-top: 10px;
   }
 }
